<resources>
    <string name="app_name">Online Exam</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create new account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="already_account_login">Already have Account ? Login</string>
    <string name="signup">Sign up</string>
    <string name="signout_png">signout_png</string>
    <string name="welcome">Welcome</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="start">Start</string>
    <string name="quiz_id">Quiz ID</string>
    <string name="arrow_png">arrow_png</string>
    <string name="your_solved_quizzes">Your Solved Quizzes</string>
    <string name="total_questions">Total Questions</string>
    <string name="_000">000</string>
    <string name="total_points">Total Points</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="create">Create</string>
    <string name="quiz_tittle">Quiz Tittle</string>
    <string name="your_quizze">Your Quizzes</string>
    <string name="exam">Exam</string>
    <string name="submit">Submit</string>
    <string name="question">Question</string>
    <string name="option_1">Option 1</string>
    <string name="option_4">Option 4</string>
    <string name="option_3">Option 3</string>
    <string name="option_2">Option 2</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="choice_1">Choice 1</string>
    <string name="choice_4">Choice 4</string>
    <string name="choice_3">Choice 3</string>
    <string name="choice_2">Choice 2</string>
    <string name="new_queston">New Queston</string>
    <string name="total_20_20">Total 20/20</string>
    <string name="your_quizzes">Your Quizzes</string>
    <string name="_20_20">20/20</string>
    <string name="quiz">Quiz</string>
    <string name="loading">Loading...</string>

</resources>